--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Global 3 Concept Ltd | Business Coaching & Compliance Experts</title>
-
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-
-<!-- Main CSS -->
+<title>Global 3 Concept Ltd</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
 <header>
-    <img src="assets/logo.png" alt="Global 3 Concept Ltd Logo">
-    <div class="menu-toggle">&#9776;</div>
+    <img src="assets/Logo.png" alt="Logo">
     <nav id="nav-menu">
         <a href="index.html">Home</a>
         <a href="coaching.html">Coaching</a>
@@ -27,82 +18,39 @@
         <a href="about.html">About</a>
         <a href="request.html">Request Service</a>
     </nav>
+    <div class="menu-toggle">&#9776;</div>
 </header>
 
-<!-- HERO SECTION -->
 <section class="hero">
     <h1>Business Coaching, Consultancy & Compliance Solutions</h1>
-    <p>We build businesses and provide quality services for business growth. From startup advisory to CAC, TIN, branding and digital marketing — Global 3 Concept Ltd is your one-stop business partner.</p>
-    <a href="request.html" class="btn">Book a Consultation</a>
+    <p>We provide expert services to help your business grow effectively and professionally.</p>
 </section>
 
-<!-- WHAT WE DO / SERVICES -->
 <section class="section">
-    <h2>What We Do</h2>
-
+    <h2>Our Services</h2>
     <div class="cards">
-        <!-- Business Coaching -->
         <div class="card">
-            <img src="assets/coaching.jpg" alt="Business Coaching">
-            <h3>Business Coaching & Consultancy</h3>
-            <p>Helping entrepreneurs and business owners grow with structure, clarity and strategy.</p>
+            <h3>Entrepreneur Coaching</h3>
+            <p>Guiding startups and business owners to structure, plan, and scale their business.</p>
             <a href="request.html" class="btn">Request Service</a>
         </div>
-
-        <!-- Business Compliance -->
         <div class="card">
-            <img src="assets/compliance.jpg" alt="Business Compliance & Support">
             <h3>Business Compliance & Support</h3>
-            <p>CAC, SCUML, TIN, Trademark, Export Licence, NIN and Passport processing made easy.</p>
+            <p>Assisting with CAC, TIN, SCUML, Trademark, and other legal business requirements.</p>
             <a href="request.html" class="btn">Request Service</a>
         </div>
-
-        <!-- Branding & Digital Growth -->
         <div class="card">
-            <img src="assets/branding.jpg" alt="Branding & Digital Growth">
             <h3>Branding & Digital Growth</h3>
-            <p>Brand identity, graphics, ads, social media strategy, website development and advert video editing.</p>
-            <a href="request.html" class="btn">Request Service</a>
-        </div>
-
-        <!-- Website Development -->
-        <div class="card">
-            <img src="assets/webdev.jpg" alt="Website Development">
-            <h3>Website Development</h3>
-            <p>Professional websites, e-commerce, and landing pages built for growth and conversion.</p>
-            <a href="request.html" class="btn">Request Service</a>
-        </div>
-
-        <!-- Social Media & Google Business -->
-        <div class="card">
-            <img src="assets/socialmedia.jpg" alt="Social Media Consultancy">
-            <h3>Social Media & Google Business Profile</h3>
-            <p>Full social media strategy, consultancy, ads management and Google Business setup for your brand.</p>
-            <a href="request.html" class="btn">Request Service</a>
-        </div>
-
-        <!-- Advert Video & Video Editing -->
-        <div class="card">
-            <img src="assets/video.jpg" alt="Advert Video & Editing">
-            <h3>Advert Video Generation & Video Editing</h3>
-            <p>Create professional advert videos and marketing visuals for your business growth.</p>
+            <p>Professional branding, website development, social media consultancy and advert video editing.</p>
             <a href="request.html" class="btn">Request Service</a>
         </div>
     </div>
 </section>
 
-<!-- WHY CHOOSE US -->
-<section class="section">
-    <h2>Why Choose Global 3 Concept Ltd</h2>
-    <p>We combine coaching, compliance, and branding under one roof so your business can grow faster without stress. Professional, trusted, and result-driven.</p>
-</section>
-
 <footer>
-    © 2026 Global 3 Concept Ltd <br>
-      global3concept29@gmail.com |  09023125118 / 09165087991
+    © 2026 Global 3 Concept Ltd | global3concept29@gmail.com | 09023125118
 </footer>
 
-<script src="js/script.js"></script>
 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script src="js/script.js"></script>
 </body>
